Data: update titles and outcomes

--- a/data/posts/1000/835.md
+++ b/data/posts/1000/835.md
@@ -16,7 +16,7 @@
 3) https://t.me/rusbrief/256496
 
 ### title.ru
-
+Я добьюсь чтобы Путин и Зеленский начали переговоры о мире
 
 ### statement.en
 And I can get it stopped. I will have that stopped before I assume... I will... if I win the election, the first thing I'm going to do is get Putin and get Zelenskyy, I know them both very well, and get them to make a deal because it's crazy.
@@ -30,7 +30,7 @@ He will ensure that Putin and Zelenskyy start peace negotiations.
 3) (in Russian) https://t.me/rusbrief/256496
 
 ### title.en
-
+I will ensure that Putin and Zelensky begin peace talks
 
 ### original-language
 en
@@ -42,10 +42,10 @@ en
 2025-05-31
 
 ### time-verified
-
+2025-10-31
 
 ### status
-awaiting
+didnot
 
 ### complexity
 complex
