--- a/data/posts/1000/867.md
+++ b/data/posts/1000/867.md
@@ -14,7 +14,7 @@
 1) https://t.me/logikamarkova/12036
 
 ### title.ru
-
+В ближайшее время мы увидим женщин губернаторов в России
 
 ### statement.en
 Currently, there are no female governors in Russia. This is after the resignation of Governor Komarova today. This is certainly a disgrace for such a modern, civilized country as Russia. I am sure that the leadership of Russia understands this, and we will see female governors in the near future. Gender equality is one of the main achievements of civilization.
@@ -26,7 +26,7 @@ Currently, there are no female governors in Russia. This is after the resignatio
 1) https://t.me/logikamarkova/12036
 
 ### title.en
-
+In the near future, we will see female governors in Russia
 
 ### original-language
 ru
@@ -38,10 +38,10 @@ ru
 2025-05-30
 
 ### time-verified
-
+2025-10-31
 
 ### status
-awaiting
+didnot
 
 ### complexity
 complex
