--- a/data/posts/2000/1470.md
+++ b/data/posts/2000/1470.md
@@ -14,7 +14,7 @@
 1) Юрий Швец -- официальный канал https://youtu.be/cnkuFCgX-Ow?t=570
 
 ### title.ru
-
+Трамп сделает то, что он обещал, он перекроет всю помощь, отдаст Украину на съедение
 
 ### statement.en
 If he wins, well, I said before... this is Trump's personal war against Zelensky... against Ukraine. It could manifest itself the very next day after November 5th. He will just push the lever and cut everything off... Trump will do what he promised; he will cut off all aid and hand Ukraine over to be devoured. 
@@ -26,7 +26,7 @@ If Trump wins the election, he will stop all aid to Ukraine and effectively hand
 1) Yuri Shvets -- official channel https://youtu.be/cnkuFCgX-Ow?t=570
 
 ### title.en
-
+Trump will do what he promised; he will cut off all aid and hand Ukraine over to be devoured
 
 ### original-language
 ru
@@ -38,10 +38,10 @@ ru
 2025-05-31
 
 ### time-verified
-
+2025-10-31
 
 ### status
-awaiting
+didnot
 
 ### complexity
 complex
