--- a/data/posts/2000/1502.md
+++ b/data/posts/2000/1502.md
@@ -14,7 +14,7 @@
 1) Евгений Киселёв https://youtu.be/awhxHUTihg0?t=525
 
 ### title.ru
-
+Война в Украине затянется до мая 2025
 
 ### statement.en
 I don't see any opportunities today to decisively turn the situation in someone's favor... Most likely, everything will be pushed to next year. I don't see the resources for any side to achieve victory today... Most likely, everything will drag on until next May or the second half of April.
@@ -26,7 +26,7 @@ The war in Ukraine will end, or there will be a significant turning point in it,
 1) Yevgeny Kiselyov https://youtu.be/awhxHUTihg0?t=525
 
 ### title.en
-
+The war in Ukraine will drag on until May 2025
 
 ### original-language
 ru
@@ -38,10 +38,10 @@ ru
 2025-05-31
 
 ### time-verified
-
+2025-05-31
 
 ### status
-awaiting
+didnot
 
 ### complexity
 complex
