--- a/data/posts/2000/1561.md
+++ b/data/posts/2000/1561.md
@@ -14,7 +14,7 @@
 1) В гостях у Гордона https://youtu.be/9AuOZO75bdA?t=1890
 
 ### title.ru
-
+Путин не отступится от стратегической цели
 
 ### statement.en
 For peace and the start of negotiations, there must be at least Moscow's agreement to retreat from the remaining parts of Ukraine that they haven’t occupied. Can you imagine that? I can’t. The idea of Putin giving up Kyiv and 80 percent of Ukraine is unimaginable to me. So far, I don’t see any signs that Putin is willing to abandon his strategic goal.
@@ -26,7 +26,7 @@ For peace and the start of negotiations, there must be at least Moscow's agreeme
 1) Visiting Gordon https://youtu.be/9AuOZO75bdA?t=1890
 
 ### title.en
-
+Putin will not abandon the strategic goal
 
 ### original-language
 ru
@@ -38,10 +38,10 @@ ru
 2025-05-31
 
 ### time-verified
-
+2025-10-31
 
 ### status
-awaiting
+completely
 
 ### complexity
 complex
