--- a/data/posts/2000/1648.md
+++ b/data/posts/2000/1648.md
@@ -14,7 +14,7 @@
 1) Популярная политика https://youtu.be/Fc7N2Bp2WSA?t=261
 
 ### title.ru
-
+Часов Яр неизбежно будет захвачен в ближайшие месяцы
 
 ### statement.en
 But if the Armed Forces of Ukraine (AFU) don’t push back the advancing forces right now, Chasiv Yar will inevitably be captured within the next few months.
@@ -26,7 +26,7 @@ But if the Armed Forces of Ukraine (AFU) don’t push back the advancing forces 
 1) Popular politics https://youtu.be/Fc7N2Bp2WSA?t=261
 
 ### title.en
-
+Chasiv Yar will inevitably be captured in the coming months
 
 ### original-language
 ru
@@ -38,10 +38,10 @@ ru
 2025-06-30
 
 ### time-verified
-
+2025-09-30
 
 ### status
-awaiting
+didnot
 
 ### complexity
 complex
