--- a/data/posts/2000/1769.md
+++ b/data/posts/2000/1769.md
@@ -6,7 +6,7 @@
 
 ### statement.ru
 Если сегодня Зурабишвили и посол США не смогут убедить грузинскую оппозицию вывести людей на майдан и начать городские стачки и серию забастовок с перекрытием аэропорта и основных дорог, уже к следующим выходным в парламенте Грузии будет конституционное большинство и начнется процедура импичмента гражданки Франции и иноагента Саломе Зурабишвили. 
-И парламент объявит о проведении досрочных президентских выборов уже в начале 2025. 
+И парламент объявит о проведении досрочных президентских выборов уже в начале 2025.
 
 ### context.ru
 
@@ -39,10 +39,10 @@ ru
 2025-01-31
 
 ### time-verified
-
+2025-01-31
 
 ### status
-awaiting
+didnot
 
 ### complexity
 complex
