--- a/data/posts/2000/1933.md
+++ b/data/posts/2000/1933.md
@@ -14,7 +14,7 @@
 1) Популярная политика https://youtu.be/IA3NqDBA6Jc?t=947
 
 ### title.ru
-
+Москва не будет бить по Европейским странам и США
 
 ### statement.en
 I believe there will be no response. There will be no strikes by Moscow on the territory of third countries—I mean European countries or the U.S. And no strikes on bases, as they mention, in the Baltic states, for example... This won’t happen. Moscow won’t react to this. 
@@ -26,7 +26,7 @@ There will be no military response from Russia to the decision allowing Ukraine 
 1) Popular Politics https://youtu.be/IA3NqDBA6Jc?t=947
 
 ### title.en
-
+Moscow will not strike European countries and the USA
 
 ### original-language
 ru
