--- a/data/posts/3000/2078.md
+++ b/data/posts/3000/2078.md
@@ -14,7 +14,7 @@
 1) Ходорковский LIVE https://youtu.be/IO-AXWeeMJM?t=98
 
 ### title.ru
-
+ЦБ РФ поднимет ставку до 23-25%
 
 ### statement.en
 To answer your question, the rate will be raised to 23-25%, but it will be raised a bit later because you can’t spoil the timing. 
@@ -26,7 +26,7 @@ Referring to the key interest rate in Russia.
 1) Khodorkovsky LIVE https://youtu.be/IO-AXWeeMJM?t=98
 
 ### title.en
-
+The Central Bank of the Russian Federation will raise the rate to 23-25%
 
 ### original-language
 ru
@@ -38,10 +38,10 @@ ru
 2025-06-30
 
 ### time-verified
-
+2025-11-08
 
 ### status
-awaiting
+didnot
 
 ### complexity
 complex
