--- a/data/posts/3000/2417.md
+++ b/data/posts/3000/2417.md
@@ -14,7 +14,7 @@
 1) Максим Шевченко https://youtu.be/Jsb6hmaphIs?t=3887
 
 ### title.ru
-
+Сделка с участием Кирилла Дмитриева будет заключена
 
 ### statement.en
 Since it has the nature of a behind-the-scenes financial and economic deal, Kirill Dmitriev is a key figure here. So, without a doubt, this deal will go through. Calling it “peace talks” doesn’t feel right. I believe it will be a situation that Trump will sell as his victory — and after that, the war will resume.  
@@ -26,7 +26,7 @@ In response to the question: “Do you think peace negotiations will reach their
 1) Maksim Shevchenko https://youtu.be/Jsb6hmaphIs?t=3887
 
 ### title.en
-
+A deal involving Kirill Dmitriev will be concluded
 
 ### original-language
 ru
@@ -38,10 +38,10 @@ ru
 2025-08-31
 
 ### time-verified
-
+2025-10-31
 
 ### status
-awaiting
+didnot
 
 ### complexity
 complex
