--- a/data/posts/3000/2789.md
+++ b/data/posts/3000/2789.md
@@ -14,7 +14,7 @@
 1) Фейгин LIVE https://youtu.be/NfdB_yE5ILU?t=250
 
 ### title.ru
-
+500% тарифы против потребителей Российской нефти будут введены
 
 ### statement.en
 Eighty-eight senators are co-authors of the resolution demanding harsh secondary sanctions and 500% tariffs against buyers of Russian oil... Senator Wicker stated that Trump asked the Senate to hold off until the end of this week. So this issue should be resolved next week. And after yesterday’s statements by Thune and Jackson, I have no doubt that the resolution will be adopted.
@@ -26,7 +26,7 @@ Eighty-eight senators are co-authors of the resolution demanding harsh secondary
 1) Feygin LIVE https://youtu.be/NfdB_yE5ILU?t=250
 
 ### title.en
-
+500% tariffs against Russian oil consumers will be introduced
 
 ### original-language
 ru
@@ -38,10 +38,10 @@ ru
 2025-06-30
 
 ### time-verified
-
+2025-10-31
 
 ### status
-awaiting
+didnot
 
 ### complexity
 regular
