--- a/data/posts/3000/2833.md
+++ b/data/posts/3000/2833.md
@@ -5,7 +5,7 @@
 209 <!-- obraz-budustchego, Образ будущего -->
 
 ### statement.ru
-Завтра Украина тоже сорвет обмен с высокой вероятностью. 
+Завтра Украина тоже сорвет обмен с высокой вероятностью.
 
 ### context.ru
 Обмен военнопленными и телами погибших между Украиной и Россией.
@@ -39,10 +39,10 @@ ru
 2025-06-09
 
 ### time-verified
-
+2025-06-09
 
 ### status
-awaiting
+didnot
 
 ### complexity
 complex
