--- a/data/posts/2000/1602.md
+++ b/data/posts/2000/1602.md
@@ -14,7 +14,7 @@
 1) Kontinent TV https://youtu.be/xKy_EBRx1Gk?t=18
 
 ### title.ru
-
+Байден не предоставит помощь Украине на 8 миллиардов
 
 ### statement.en
 On September 26, Biden announced that $8 billion in military aid would be provided to Ukraine. As of today, that has not happened. The total amount of military aid provided by the United States to Ukraine since that promise is zero. Zero dollars, zero cents. I would venture to predict that, by the end of Biden's term, as he promised, this $8 billion in military aid will not be provided to Ukraine.
@@ -26,7 +26,7 @@ On September 26, Biden announced that $8 billion in military aid would be provid
 1) Kontinent TV https://youtu.be/xKy_EBRx1Gk?t=18
 
 ### title.en
-
+Biden will not provide $8 billion in aid to Ukraine
 
 ### original-language
 ru
@@ -38,10 +38,10 @@ ru
 2025-01-20
 
 ### time-verified
-
+2025-01-20
 
 ### status
-awaiting
+unverifiable
 
 ### complexity
 complex
