--- a/data/posts/3000/2753.md
+++ b/data/posts/3000/2753.md
@@ -14,7 +14,7 @@
 1) Популярная политика https://youtu.be/8FfzwK-JAjY?t=370
 
 ### title.ru
-
+Украине передадут ракеты Таурусы
 
 ### statement.en
 Zelensky will be in Berlin tomorrow. He wouldn’t have gone if there weren’t a firm promise to provide Taurus missiles. His visit, in fact, signals that the agreement to supply such weapons is being put into action.
@@ -26,7 +26,7 @@ Zelensky will be in Berlin tomorrow. He wouldn’t have gone if there weren’t 
 1) Popular Politics https://youtu.be/8FfzwK-JAjY?t=370
 
 ### title.en
-
+Ukraine will be given Taurus missiles
 
 ### original-language
 ru
@@ -38,10 +38,10 @@ ru
 2025-05-31
 
 ### time-verified
-
+2025-10-31
 
 ### status
-awaiting
+didnot
 
 ### complexity
 complex
