--- a/data/posts/3000/2875.md
+++ b/data/posts/3000/2875.md
@@ -14,7 +14,7 @@
 1) Radio VERA TV https://youtu.be/YHuYzz9frBM?t=2710
 
 ### title.ru
-
+G7 2025 состоится
 
 ### statement.en
 I believe that any conferences of this kind will take place regardless of what is happening. It’s unlikely they will be canceled.
@@ -26,7 +26,7 @@ Response to the question: "French President Macron canceled the international co
 1) Radio VERA TV https://youtu.be/YHuYzz9frBM?t=2710
 
 ### title.en
-
+G7 2025 will take place
 
 ### original-language
 ru
@@ -38,10 +38,10 @@ ru
 2025-06-17
 
 ### time-verified
-
+2025-06-17
 
 ### status
-awaiting
+completely
 
 ### complexity
 regular
