Data: update titles and outcomes

--- a/data/posts/2000/1781.md
+++ b/data/posts/2000/1781.md
@@ -14,7 +14,7 @@
 1) Ivan Yakovina https://youtu.be/kKFK3Ur_gQg?t=1820
 
 ### title.ru
-
+Рубль к доллару будет расти
 
 ### statement.en
 I think it will gradually increase. I don’t know to what levels exactly; it will all depend on how much Putin spends and prints unbacked money. But that the dollar rate will rise is absolutely certain.
@@ -26,7 +26,7 @@ The ruble-to-dollar exchange rate.
 1) Ivan Yakovina https://youtu.be/kKFK3Ur_gQg?t=1820
 
 ### title.en
-
+The ruble against the dollar will rise
 
 ### original-language
 ru
@@ -38,10 +38,10 @@ ru
 2025-12-31
 
 ### time-verified
-
+2025-10-30
 
 ### status
-awaiting
+didnot
 
 ### complexity
 regular
