--- a/data/posts/2000/1896.md
+++ b/data/posts/2000/1896.md
@@ -14,7 +14,7 @@
 1) В гостях у Гордона https://youtu.be/Fgm_RMMNOBI?t=204
 
 ### title.ru
-
+Трамп пошлёт Маска подальше
 
 ### statement.en
 I think that pretty soon Trump will send Musk packing, because two narcissistic egocentrics with delusions of grandeur won’t be able to share the same space.
@@ -26,7 +26,7 @@ I think that pretty soon Trump will send Musk packing, because two narcissistic 
 1) Visiting Gordon https://youtu.be/Fgm_RMMNOBI?t=204
 
 ### title.en
-
+Trump will tell Musk to get lost
 
 ### original-language
 ru
@@ -38,10 +38,10 @@ ru
 2025-11-12
 
 ### time-verified
-
+2025-05-30
 
 ### status
-awaiting
+completely
 
 ### complexity
 complex
