--- a/data/posts/3000/2491.md
+++ b/data/posts/3000/2491.md
@@ -14,7 +14,7 @@
 1) Александр ШЕЛЕСТ https://youtu.be/RqLv13dw5ho?t=3370
 
 ### title.ru
-
+Война в Украине будет продолжаться
 
 ### statement.en
 Unfortunately, the war will continue. It seems that now there will be a war. Not a special military operation, but a war in the true sense.
@@ -26,7 +26,7 @@ Unfortunately, the war will continue. It seems that now there will be a war. Not
 1) Aleksandr SHELEST https://youtu.be/RqLv13dw5ho?t=3370
 
 ### title.en
-
+The war in Ukraine will continue
 
 ### original-language
 ru
@@ -38,10 +38,10 @@ ru
 2025-08-31
 
 ### time-verified
-
+2025-10-31
 
 ### status
-awaiting
+completely
 
 ### complexity
 complex
