--- a/data/posts/3000/2718.md
+++ b/data/posts/3000/2718.md
@@ -14,7 +14,7 @@
 1) https://youtu.be/EbTxZZxXjd8?t=382
 
 ### title.ru
-
+Потолок цен на Российскую нефть не снизят до 45 долларов
 
 ### statement.en
 The oil price cap should have been revised a long time ago. Sixty is already a completely outdated figure for the current market. It should have been lowered. But imagining that the G20 will now come together and decide to lower it from 60 to 45 — that’s unrealistic. There are already too many disagreements, too many conflicts, so it’s no longer possible to make it happen. 
@@ -26,7 +26,7 @@ Referring to the oil price cap for Russia.
 1) https://youtu.be/EbTxZZxXjd8?t=382
 
 ### title.en
-
+The price cap on Russian oil will not be lowered to $45
 
 ### original-language
 ru
@@ -38,10 +38,10 @@ ru
 2025-11-15
 
 ### time-verified
-
+2025-11-10
 
 ### status
-awaiting
+completely
 
 ### complexity
 complex
