--- a/data/posts/4000/3180.md
+++ b/data/posts/4000/3180.md
@@ -14,7 +14,7 @@
 1) I Gryanul Grem https://youtu.be/8qwmOuCSxQU?t=2804
 
 ### title.ru
-
+В голосовании за изображение на купюре 500 рублей победит Грозный сити
 
 ### statement.en
 Right now, there is a vote underway for which object will appear on the new 500-ruble Russian banknote. And Mount Elbrus is competing with Grozny-City. I think Grozny-City will win the vote.
@@ -26,7 +26,7 @@ Right now, there is a vote underway for which object will appear on the new 500-
 1) I Gryanul Grem https://youtu.be/8qwmOuCSxQU?t=2804
 
 ### title.en
-
+Grozny City will win the vote for the image on the 500 ruble banknote
 
 ### original-language
 ru
@@ -38,10 +38,10 @@ ru
 2025-10-16
 
 ### time-verified
-
+2025-10-16
 
 ### status
-awaiting
+didnot
 
 ### complexity
 regular
