--- a/data/posts/4000/3185.md
+++ b/data/posts/4000/3185.md
@@ -14,7 +14,7 @@
 1) The Breakfast Show https://youtu.be/U8F9-sLk09c?t=1400
 
 ### title.ru
-
+Трамп даст Томагавки Украине в ближайшие дни
 
 ### statement.en
 I think one could choose the option "will give in the coming days".
@@ -26,7 +26,7 @@ Will Trump give Tomahawks to Ukraine? The four options are: 1) Yes, will give in
 1) The Breakfast Show https://youtu.be/U8F9-sLk09c?t=1400
 
 ### title.en
-
+Trump will give Tomahawk missiles to Ukraine in the coming days
 
 ### original-language
 ru
@@ -38,10 +38,10 @@ ru
 2025-11-15
 
 ### time-verified
-
+2025-11-10
 
 ### status
-awaiting
+didnot
 
 ### complexity
 regular
