--- a/data/posts/3000/2710.md
+++ b/data/posts/3000/2710.md
@@ -14,7 +14,7 @@
 1) Популярная политика https://youtu.be/M2hF32tqlpE?t=775
 
 ### title.ru
-
+Мирного соглашения между Россией и Украиной в обозримое время не будет
 
 ### statement.en
 There will be no peace agreement between Russia and Ukraine in the foreseeable future, whether anyone likes it or not. This is a fact that follows from the logic of Putin’s behavior... They won’t reach an agreement.
@@ -26,7 +26,7 @@ There will be no peace agreement between Russia and Ukraine in the foreseeable f
 1) Popular Politics https://youtu.be/M2hF32tqlpE?t=775
 
 ### title.en
-
+There will be no peace agreement between Russia and Ukraine in the foreseeable future
 
 ### original-language
 ru
@@ -38,10 +38,10 @@ ru
 2025-11-15
 
 ### time-verified
-
+2025-11-10
 
 ### status
-awaiting
+completely
 
 ### complexity
 complex
