Data: update outcomes

--- a/data/posts/2000/1328.md
+++ b/data/posts/2000/1328.md
@@ -11,7 +11,7 @@
 
 
 ### notes.ru
-1) Популярная политика https://youtu.be/2lEhbWniWw4?t=1933
+1) Популярная политика https://youtu.be/2lEhbWniWw4?t=1933 (32:20 - 33:33)
 
 ### title.ru
 
@@ -38,10 +38,10 @@ ru
 2025-12-31
 
 ### time-verified
-
+2025-11-24
 
 ### status
-awaiting
+didnot
 
 ### complexity
 complex
