--- a/data/posts/2000/1352.md
+++ b/data/posts/2000/1352.md
@@ -11,7 +11,7 @@
 
 
 ### notes.ru
-1) Популярная политика https://www.youtube.com/watch?v=fIapHp3pX8o&t=2030s
+1) Популярная политика https://youtu.be/fIapHp3pX8o?t=2039 (34:00 - 34:18)
 
 ### title.ru
 
@@ -23,7 +23,7 @@ There will be no 100 rubles to the dollar in Russia in a year. The exchange rate
 
 
 ### notes.en
-1) Popular politics https://www.youtube.com/watch?v=fIapHp3pX8o&t=2030s
+1) Popular politics https://youtu.be/fIapHp3pX8o?t=2039
 
 ### title.en
 
@@ -38,10 +38,10 @@ ru
 2025-12-31
 
 ### time-verified
-
+2025-09-12
 
 ### status
-awaiting
+didnot
 
 ### complexity
 complex
