--- a/data/posts/2000/1732.md
+++ b/data/posts/2000/1732.md
@@ -11,7 +11,7 @@
 Ключевая ставка будет снижаться в 2025 году в России.
 
 ### notes.ru
-1) Живой Гвоздь https://youtu.be/lcIM06sXoC4?t=1627
+1) Живой Гвоздь https://youtu.be/lcIM06sXoC4?t=1627 (27:17 - 27:39)
 
 ### title.ru
 
@@ -38,10 +38,10 @@ ru
 2025-12-31
 
 ### time-verified
-
+2025-11-24
 
 ### status
-awaiting
+completely
 
 ### complexity
 regular
