--- a/data/posts/2000/1570.md
+++ b/data/posts/2000/1570.md
@@ -11,7 +11,7 @@
 
 
 ### notes.ru
-1) Власть vs Влащенко https://youtu.be/VU6xbpD_STg?t=177
+1) Власть vs Влащенко https://youtu.be/VU6xbpD_STg?t=177 (3:17 - 3:31)
 
 ### title.ru
 
@@ -38,10 +38,10 @@ ru
 2025-12-31
 
 ### time-verified
-
+2025-11-24
 
 ### status
-awaiting
+completely
 
 ### complexity
 complex
