--- a/data/posts/3000/2798.md
+++ b/data/posts/3000/2798.md
@@ -36,13 +36,13 @@ ru
 2025-06-04
 
 ### time-awaiting
-2025-12-04
+2025-06-24
 
 ### time-verified
 
 
 ### status
-awaiting
+completely
 
 ### complexity
 complex
